[package]
name = "shin"
version = "0.1.0"
edition = "2018"

[dependencies]
async-process = "1.3"
async-channel = "1.6"
async-trait = "0.1"
futures = "0.3"
futures-lite = "1.12"
nix = "0.23"
libc = "0.2"
num-traits = "0.2"
num-derive = "0.3"
async-thread = "0.1"
async-oneshot = "0.5"
event-listener  = "2.5"
log = "0.4"
env_logger = "0.9"
async-recursion = "0.3"